--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: boa
 Version: 1.1.8-1
-Date: 2009-04-22
+Date: 2015-06-20
 Title: Bayesian Output Analysis Program (BOA) for MCMC
 Author: Brian J. Smith
 Maintainer: Brian J. Smith <brian-j-smith@uiowa.edu>
@@ -9,4 +9,4 @@ Description: A menu-driven program and library of functions for carrying out
     convergence diagnostics and statistical and graphical analysis of Markov
     chain Monte Carlo sampling output.
 License: GPL-2
-URL: http://www.public-health.uiowa.edu/boa
+URL: http://www.jstatsoft.org/v21/i11
