--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Title: Bayesian Output Analysis Program (BOA) for MCMC
 Author: Brian J. Smith
 Maintainer: Brian J. Smith <brian-j-smith@uiowa.edu>
 Depends: R (>= 2.7)
+Imports: graphics, grDevices, stats, utils
 Description: A menu-driven program and library of functions for carrying out
     convergence diagnostics and statistical and graphical analysis of Markov
     chain Monte Carlo sampling output.
