Updage package version to 1.1.8-2.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: boa
-Version: 1.1.8-1
-Date: 2015-06-20
+Version: 1.1.8-2
+Date: 2016-06-22
 Title: Bayesian Output Analysis Program (BOA) for MCMC
-Author: Brian J. Smith
+Authors@R: person("Brian J.", "Smith", role = c("aut", "cre"),
+                  email = "brian-j-smith@uiowa.edu")
 Maintainer: Brian J. Smith <brian-j-smith@uiowa.edu>
 Depends: R (>= 2.7)
 Imports: graphics, grDevices, stats, utils
